--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "ra-auth-google": "^3.0.0",
     "react": "^19.0.0",
     "react-admin": "^5.8.0",
     "react-dom": "^19.0.0",
@@ -28,6 +29,7 @@
     "@types/node": "^20.10.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
