--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20.10.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
